--- a/RW500Package/src/config.properties
+++ b/RW500Package/src/config.properties
@@ -1,4 +1,4 @@
-Env=Pre-Prod
+Env=STG
 DEVURL=http://192.168.117.22:8073/login
 DEVUserName=3453101
 DEVPassword=pdoshi
@@ -11,4 +11,3 @@ PREPRODPassword=Fedex123
 DEVFile=.\\src\\main\\resources\\NA_DEV.xls
 STGFile=.\\src\\main\\resources\\NA_STG.xls
 PREPRDFile=.\\src\TestFiles\PreProductionRateVerification.xlsx
-
