Changes of New Pre-Prod URL

--- a/RW500Package/src/config.properties
+++ b/RW500Package/src/config.properties
@@ -2,10 +2,10 @@ Env=STG
 DEVURL=http://192.168.117.22:8073/login
 DEVUserName=3453101
 DEVPassword=pdoshi
-STGURL=https://Staging.fedexsameday.com/specialsupport.aspx
+STGURL=https://staging.fedexsameday.com/specialsupport.aspx
 STGUserName=FedExSupport
 STGPassword=Fedex123
-PREPRODURL=http://10.20.205.70:9060/specialsupport.aspx
+PREPRODURL=http://10.20.205.67:9060/specialsupport.aspx
 PREPRODUserName=support3
 PREPRODPassword=Fedex123
 DEVFile=.\\src\\main\\resources\\NA_DEV.xls
